fixed spacing and loader

--- a/src/Views/css/home.css
+++ b/src/Views/css/home.css
@@ -204,13 +204,14 @@ select.mySelectArrow {
   font-weight: 600;
   font-size: 12px;
   line-height: 14px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .tags_header img{
-  width: 30px;
+  width: 40px;
 }
 .tags_header p {
-  padding-top: 8px;;
+  padding-top: 12px;
+  font-size: 14px;
 }
 .category{
   margin-top: 10px;
@@ -379,6 +380,7 @@ select.mySelectArrow {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 10px 0;
 }
 @media (max-width: 768px){
   .searchbar_menu{
